--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Leckerli+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/style.css">
 
 </head>
 <body>
-    
+    <div id="app">
+        <aside>
+            <img src="assets/Logo.svg" alt="">
+            <div class="aside-container">
+                <h1>Festivite</h1>
+                <h2>Crie um convite digital para seu evento</h2>
+            </div>
+        </aside>
+    </div>
 </body>
 </html>
