Styling a Custom Fieldset

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                     <div class="row-2">
                         <div class="field">
                         <label for="inicio">Início</label>
-                        <input id="inicio" type="datetime-local" placeholder="DD/MM/AAAA, --:--">
+                        <input id="inicio" type="datetime-local">
                      </div>
 
                         <div class="field">
                         <label for="fim">Fim</label>
-                        <input id="fim" type="datetime-local" placeholder="DD/MM/AAAA, --:--">
+                        <input id="fim" type="datetime-local">
                         </div>
                     </div>
 
@@ -80,44 +80,42 @@
                 <div class="container">
                         <img src="assets/icons/paintbrush.svg" alt="">
                         <span>Personalização</span>
+                        
                         </div>
 
                 <fieldset>
 
                     <div class="color-btn">
-
+                        <h3>Cor principal</h3>
                         <div>
-                            <input type="radio" name="primary" id="c1" value="#60a5fa" checked>
-                            <label for="c1" style="--swatch:#60a5fa" aria-label="Azul claro"></label>
+                            <input type="radio" name="primary" id="c1" checked>
+                            <label for="c1" aria-label="Roxo"></label>
 
-                            <input type="radio" name="primary" id="c2" value="#6366f1">
-                            <label for="c2" style="--swatch:#6366f1" aria-label="Índigo"></label>
+                            <input type="radio" name="primary" id="c2">
+                            <label for="c2" aria-label="Fúcsia"></label>
 
-                            <input type="radio" name="primary" id="c3" value="#a855f7">
-                            <label for="c3" style="--swatch:#a855f7" aria-label="Roxo"></label>
+                            <input type="radio" name="primary" id="c3">
+                            <label for="c3" aria-label="Rosa"></label>
 
-                            <input type="radio" name="primary" id="c4" value="#ec4899">
-                            <label for="c4" style="--swatch:#ec4899" aria-label="Magenta"></label>
+                            <input type="radio" name="primary" id="c4">
+                            <label for="c4" aria-label="Laranja"></label>
 
-                            <input type="radio" name="primary" id="c5" value="#f43f5e">
-                            <label for="c5" style="--swatch:#f43f5e" aria-label="Vermelho"></label>
+                            <input type="radio" name="primary" id="c5">
+                            <label for="c5" aria-label="Amarelo"></label>
 
-                            <input type="radio" name="primary" id="c6" value="#f97316">
-                            <label for="c6" style="--swatch:#f97316" aria-label="Laranja"></label>
+                            <input type="radio" name="primary" id="c6">
+                            <label for="c6" aria-label="Lima"></label>
 
-                            <input type="radio" name="primary" id="c7" value="#fbbf24">
-                            <label for="c7" style="--swatch:#fbbf24" aria-label="Amarelo"></label>
+                            <input type="radio" name="primary" id="c7">
+                            <label for="c7" aria-label="Verde"></label>
 
-                            <input type="radio" name="primary" id="c8" value="#a3e635">
-                            <label for="c8" style="--swatch:#a3e635" aria-label="Lima"></label>
+                            <input type="radio" name="primary" id="c8">
+                            <label for="c8" aria-label="Ciano"></label>
 
-                            <input type="radio" name="primary" id="c9" value="#34d399">
-                            <label for="c9" style="--swatch:#34d399" aria-label="Verde"></label>
-
-                            <input type="radio" name="primary" id="c10" value="#22d3ee">
-                            <label for="c10" style="--swatch:#22d3ee" aria-label="Ciano"></label>
+                            <input type="radio" name="primary" id="c9">
+                            <label for="c9" aria-label="Navy"></label>
                         </div>
-                    </div>
+                        </div>
 
                     <div>
                         <h3>tema do evento</h3>
