--- a/index.html
+++ b/index.html
@@ -234,10 +234,16 @@
 
                     <div class="field">
                         <h3>Foto de capa</h3>
-                        <div class="droparea-wrapper">
+                        <div class="dropzone">
                             <div>
-                                <input type="file">
-                            </div>
+                                <input type="file" id="cover" required>
+                                <label class="dz-label" for="cover">
+                                    <img src="assets/icons/upload.svg" alt="">
+                                    Selecionar
+                                </label>
+                                <h3 class="dz-placeholder">Nenhum arquivo selecionado</h3>
+                                <h3 class="dz-filename">image.png</h3>
+                                </div>
                         </div>
                     </div>
 
